# minigolf

./: README.md  achive.txt  ball.py  constants.py  course_maker.py  main.py  not main.py  physics_object.py  pyproject.toml  rect_barrier.py
_windowgui/: __init__.py  constants.py  notes.txt
_windowgui/assets/: __init__.py  assets.py
_windowgui/gui/: __init__.py  gui.py
_windowgui/gui/elements/: __init__.py  gui_element.py  text_box.py  text_element.py
_windowgui/gui/elements/buttons/: __init__.py  button.py  icon_button.py  text_button.py
assets/blocks/: renaming.py
courses/: 1.json
game/: ball.py  constants.py  game.py
game/course/: __init__.py  block.py  course.py  hole.py
util/: image.py  text.py  window.py
