[tool.poetry]
package-mode = false
name = "minigolf"
version = "0.1.0"
description = ""
authors = ["HunterBowie <73845280+HunterBowie@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
pymunk = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
